src/Ico/Bundle/AppBundle/Resources/public/css/base.css
body {
    font-size: 16px;
    padding-bottom: 100px;
}
.breadcrumb {
    margin: 0;
}
.fa {
    margin-right: 7px;
}
.link {
    cursor: pointer;
}
.justify {
    text-align: justify;
}
.popover {
    font-weight: normal;
    text-decoration: none;
    font-style: normal;
    font-size: small;
}
.icon {
    width: 15px;
}
.ico-logo {
    height: 35px;
    position: relative;
    top: 8px;
    left: -150px;
}
.table {
    display: table;
    margin: 0;
}
.tr {
    display: table-row;
}
.td {
    display: table-cell;
}
.popover {
    max-width : 400px;
    z-index   : 1060;
    font-size: 15px;
}
.popover-content {
    padding: 6px;
}
.popover .well {
    margin: 5px 0 0 0;
}
.popover h4 {
    margin: 5px 2px 7px 2px;
}
.popover hr {
    margin: 0 0 3px 0;
}
a, a:hover, a:active, a:visited, .text-primary {
    color: #42A500;
    text-decoration: none !important;
}
a.btn {
    color: white;
}
a.disabled, a.disabled:hover {
    color: inherit;
    cursor: text;
}
.chosen-container-multi .chosen-choices {
    cursor: text;
    height: auto !important;
    height: 1%;
    margin: 0;
    overflow: hidden;
    padding: 0;
    position: relative;
}
.search-choice {
    background-color: #42A500;
    display: inline;
    padding: .2em .6em .3em;
    color: #fff;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: .25em;
}
.select-multiple-wrapper select:first-child {
    float: right;
    width: auto;
    height: 27px;
    padding: 5px 10px;
    font-size: 12px;
    line-height: 1.5;
    border-bottom-right-radius: 0 !important;
    border-bottom-left-radius: 0 !important;
    position: relative;
    top: 1px;
}
.select-multiple-wrapper select[multiple] + .chosen-container .chosen-choices {
    border-top-right-radius: 0 !important;
}
.well form {
    margin: 0;
}
legend button {
    float: right;
    position: relative;
    top: -7px;
}
.btn-primary,
.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    background-color: #42A500;
    border-color: #3B9400;
}
.pagination>.active>a, 
.pagination>.active>span, 
.pagination>.active>a:hover, 
.pagination>.active>span:hover, 
.pagination>.active>a:focus, 
.pagination>.active>span:focus {
    background-color: #42A500;
    border-color: #3B9400;
}
select:focus {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}
mark {
    background-color: rgba(66, 165, 0, 0.14);
    color: inherit;
    padding: 0;
}
.panel label {
    font-weight: bold;
}
.nav-modal {
    display: table-row;
}
.nav-modal > div {
    display: table-cell;
}
.nav-modal > div:first-child {
    position: absolute;
    left: 20px;
}
.nav-modal > div:last-child {
    position: absolute;
    right: 20px;
}
.form_row.form-group {
    display: inline-block;
    margin-right: 20px;
    vertical-align: top;
}
.select-multiple-wrapper {
    display: inline-block;
    position: relative;
    top: -1px;
}
.select-multiple-wrapper .form_row.form-group {
    display: block;
    margin-right: 0px;
}
#form_keywords, .select-multiple-wrapper {
    width: 300px;
}
.modal-header .btn-group {
    float: right;
    margin-right: 15px;
    position: relative;
    top: -5px;
}
a.ninja {
    color: #555555;
    font-weight: normal;
    text-decoration: none;
    font-style: normal;
}
img.thumbnail {
    max-width: 26px;
    max-height: 26px;
    display: inline-block;
    margin: 0;
    margin-right: 5px;
    padding: 2px;
}
a > img.thumbnail {
    position: relative;
    top: -3px;
}
#vTag {
    position: absolute;
    top: 35px;
    margin-left: 70px;
    transform: rotate(-5deg);
    background-color: #42A500;
    color: white;
    padding: 3px 10px;
    font-size: 14px;
    border-radius: 5px;
    /*border: 1px solid #3B9400;*/
    border-bottom: 3px solid #3B9400;
    z-index: 1001;
}
table.trueTree {
    /*width: 100%;*/
/*    border-collapse: separate;
    border-spacing: 15px;*/
}
table.trueTree td {
    text-align: left;
    vertical-align: top;
    height: 1px;
}
table.trueTree .entity {
    width: 220px;
    background-color: #fafafa;
    border-radius: 4px;
    border-style: solid;
    border-color: #ededed;
    border-width: 0 1px 4px 1px;
    padding: 5px 10px;
    margin: 5px 0;
    transition: background-color 200ms, border-color 200ms, color 200ms;
}
table.trueTree a:hover .entity, table.trueTree .entity.main  {
    background-color: #42A500;
    border-color: #3B9400;
    color: white;
}
table.trueTree .hdecoration, table.trueTree .vdecoration {
    border-width: 3px;
    border-color: #bdbdbd;
}
table.trueTree .hdecoration {
    width: 30px;
    height: 25px;
    border-style: none;
    border-bottom-style: solid;
}
table.trueTree .vdecoration {
    width: 3px;
    height: 100%;
    border-style: none;
    border-left-style: solid;
}
table.trueTree .vdecoration.first {
    margin-top: 22px;
}
table.trueTree .vdecoration.last {
    height: 25px;
}
table.trueTree .vdecoration.unique {
    height: 25px;
    border-style: none;
    border-bottom-style: solid;
}

